--- a/.travis.yml
+++ b/.travis.yml
@@ -9,35 +9,19 @@ branches:
   - develop
   
 after_success: 
-#- curl -L "https://cli.run.pivotal.io/stable?release=linux64binary&source=github" | tar -zx
 - mkdir $HOME/cf-cli
 - curl -L "https://packages.cloudfoundry.org/stable?release=linux64-binary&version=v7&source=github" | tar -zx -C $HOME/cf-cli
 - export PATH=$PATH:$HOME/cf-cli
-#- chmod +x ./deploy.sh
   
 deploy:
-#  - provider: cloudfoundry
-#    edge: true
-#    api: https://api.london.cloud.service.gov.uk
-#    organization: ccs-scale-cat    
-#    space: sandbox
-#    on:
-#      branch: feature/SINF-185_cat_skeleton_api
-#
-#  - provider: cloudfoundry
-#    edge: true
-#    api: https://api.london.cloud.service.gov.uk
-#    organization: ccs-scale-cat  
-#    space: development
-#    on:
-#      branch: develop
-      
   - provider: script
+    skip_cleanup: true
     script: CF_ROUTE_PREFIX=sbx- CF_SPACE=sandbox CF_RAM=1024M bash ./deploy.sh
     on:
       branch: feature/SINF-196_multi_env_config
       
   - provider: script
+    skip_cleanup: true
     script: CF_ROUTE_PREFIX=dev- CF_SPACE=development CF_RAM=1024M bash ./deploy.sh
     on:
       branch: develop
