--- a/manifest.yml
+++ b/manifest.yml
@@ -3,9 +3,7 @@ applications:
 - name: ccs-scale-cat-service
   routes:
   - route: ((route-prefix))ccs-scale-cat-service.apps.internal
-  memory: ((ram))
+  memory: ((memory))
   buildpacks: 
     - https://github.com/cloudfoundry/java-buildpack#v4.33
   path: target/ccs-scale-cat-service-0.0.1-SNAPSHOT.jar
-#  services:
-#  - tom-postgres
