--- a/manifest.yml
+++ b/manifest.yml
@@ -2,10 +2,8 @@
 applications:
 - name: ccs-scale-cat-service
   routes:
-  - route: ccs-scale-cat-service.apps.internal
-  memory: 1024M
+  - route: ((route-prefix))ccs-scale-cat-service.apps.internal
+  memory: ((memory))
   buildpacks: 
     - https://github.com/cloudfoundry/java-buildpack#v4.33
   path: target/ccs-scale-cat-service-0.0.1-SNAPSHOT.jar
-#  services:
-#  - tom-postgres
