--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   - "$HOME/.m2"
 branches:
   only:
-  - feature/SINF-198_rollbar_integration
+  - ^(feature|bugfix)\/SINF-[0-9]+.*$
   - develop
   
 after_success: 
@@ -18,7 +18,8 @@ deploy:
     skip_cleanup: true
     script: CF_ROUTE_PREFIX=sbx- CF_SPACE=sandbox CF_MEMORY=1024M bash ./deploy.sh
     on:
-      branch: feature/SINF-198_rollbar_integration
+      all_branches: true
+      condition: ${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} =~ ^(feature|bugfix)\/SINF-[0-9]+.*$
       
   - provider: script
     skip_cleanup: true
