--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   - "$HOME/.m2"
 branches:
   only:
-  - ^(feature|bugfix)\/SINF-[0-9]+.*$
+  - /^(feature|bugfix)\/SINF-[0-9]+.*$/
   - develop
   
 after_success: 
