--- a/manifest.yml
+++ b/manifest.yml
@@ -7,3 +7,6 @@ applications:
   buildpacks: 
     - https://github.com/cloudfoundry/java-buildpack#v4.33
   path: target/ccs-scale-cat-service-0.0.1-SNAPSHOT.jar
+  env:
+    AGREEMENTS_SERVICE_URL: ((agreements-svc-url))
+    AGREEMENTS_SERVICE_API_KEY: ((agreements-svc-api-key))
