--- a/manifest.yml
+++ b/manifest.yml
@@ -8,6 +8,6 @@ applications:
     - https://github.com/cloudfoundry/java-buildpack#v4.33
   path: target/ccs-scale-cat-service-0.0.1-SNAPSHOT.jar
   env:
-    AGREEMENTS_SERVICE_URL: ((agreements-svc-url))
+    AGREEMENTS_SERVICE_URL: ((agreements-service-url))
     AGREEMENTS_SERVICE_API_KEY: ((agreements-svc-api-key))
     ROLLBAR_ACCESS_TOKEN: ((ROLLBAR_ACCESS_TOKEN))
