Integrate with Scale Agreements service (#5)
* branch config for sbx to pattern match feature or bugfix branches

* Wrap branches regex with slashes

* First attempt at injecting secure env var to service

* Add default value for AGREEMENTS_SERVICE_URL to ensure tests pass

* Add agreements-svc-api-key to deploy.sh

* Rollbar access token

* Fix typo

* More env vars and config

* ROLLBAR_ENV=development

* Integration with Agreements Service

* Reinstate default values for agreements so tests happy

* Fix the blinkin' env vars..

* Fix typo and manually re-add secrets with comments identifying vars

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,9 +1,14 @@
 ---
 applications:
-- name: ((route-prefix))ccs-scale-cat-service
+- name: ((CF_ROUTE_PREFIX))ccs-scale-cat-service
   routes:
-  - route: ((route-prefix))ccs-scale-cat-service.apps.internal
-  memory: ((memory))
+  - route: ((CF_ROUTE_PREFIX))ccs-scale-cat-service.apps.internal
+  memory: ((CF_MEMORY))
   buildpacks: 
     - https://github.com/cloudfoundry/java-buildpack#v4.33
   path: target/ccs-scale-cat-service-0.0.1-SNAPSHOT.jar
+  env:
+    AGREEMENTS_SERVICE_URL: ((AGREEMENTS_SERVICE_URL))
+    AGREEMENTS_SERVICE_API_KEY: ((AGREEMENTS_SERVICE_API_KEY))
+    ROLLBAR_ACCESS_TOKEN: ((ROLLBAR_ACCESS_TOKEN))
+    ROLLBAR_ENV: ((ROLLBAR_ENV))
