Instruct buildpack to use JDK 11 for compilation

--- a/manifest.yml
+++ b/manifest.yml
@@ -12,3 +12,4 @@ applications:
     AGREEMENTS_SERVICE_API_KEY: ((AGREEMENTS_SERVICE_API_KEY))
     ROLLBAR_ACCESS_TOKEN: ((ROLLBAR_ACCESS_TOKEN))
     ROLLBAR_ENV: ((ROLLBAR_ENV))
+    JBP_CONFIG_OPEN_JDK_JRE: '{ "jre": { version: 11.+ } }'
