--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,12 @@
-spring:
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: https://idp.example.com/issuer
-          # More config necessary if no Provider Configuration / Authorization Metadata endpoint provided
+#spring:
+#  security:
+#    oauth2:
+#      resourceserver:
+#        jwt:
+#          jwk-set-uri: "SET IN ENV"
+          
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG          
