--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.4</version>
+		<version>2.4.5</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>uk.gov.crowncommercial.dts</groupId>
@@ -18,6 +18,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<rollbar.version>1.7.6</rollbar.version>
+		<client.base.package.name>uk.gov.crowncommercial.dts.scale.cat</client.base.package.name>
 	</properties>
 
 	<dependencies>
@@ -36,6 +37,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.rollbar</groupId>
@@ -85,6 +90,19 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!-- <plugin> This 2019 version is required for OpenAPI 3 <groupId>io.swagger.codegen.v3</groupId> 
+				<artifactId>swagger-codegen-maven-plugin</artifactId> <version>3.0.25</version> 
+				<executions> <execution> <goals> <goal>generate</goal> </goals> <configuration> 
+				<inputSpec>${project.basedir}/src/main/resources/CaT-service.yaml</inputSpec> 
+				<language>java</language> <packageName>${client.base.package.name}</packageName> 
+				<modelPackage>${client.base.package.name}.model</modelPackage> <apiPackage>${client.base.package.name}.api</apiPackage> 
+				<invokerPackage>${client.base.package.name}.invoker</invokerPackage> <generateApis>false</generateApis> 
+				<generateModelTests>false</generateModelTests> <generateModelDocumentation>false</generateModelDocumentation> 
+				<configOptions> <groupId>${project.groupId}</groupId> <artifactId>${project.artifactId}</artifactId> 
+				<artifactVersion>${project.version}</artifactVersion> <library>resttemplate</library> 
+				<java8>true</java8> <dateLibrary>java8</dateLibrary> <licenseName>Apache 
+				2.0</licenseName> <licenseUrl>https://www.apache.org/licenses/LICENSE-2.0</licenseUrl> 
+				</configOptions> </configuration> </execution> </executions> </plugin> -->
 			<plugin>
 				<groupId>org.openapitools</groupId>
 				<artifactId>openapi-generator-maven-plugin</artifactId>
