Compiles against CaT OpenAPI spec. Jaggaer client config

--- a/pom.xml
+++ b/pom.xml
@@ -96,104 +96,12 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 <!-- 			<plugin>
-				<groupId>io.swagger.codegen.v3</groupId>
-				<artifactId>swagger-codegen-maven-plugin</artifactId>
-				<version>3.0.25</version>
-				<executions>
-					<execution>
-						<id>exec-swag-1</id>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-						<configuration>
-							<inputSpec>https://raw.githubusercontent.com/Crown-Commercial-Service/ccs-api-definitions-common/main/OCDS/OCDS_Vanilla.yaml</inputSpec>
-							<language>java</language>
-							<packageName>${client.base.package.name}</packageName>
-							<modelPackage>${client.base.package.name}.model</modelPackage>
-							<apiPackage>${client.base.package.name}.api</apiPackage>
-							<invokerPackage>${client.base.package.name}.invoker</invokerPackage>
-							<generateApis>false</generateApis>
-							<generateModelTests>false</generateModelTests>
-							<generateModelDocumentation>false</generateModelDocumentation>
-							<generateSupportingFiles>false</generateSupportingFiles>
-							<verbose>false</verbose>
-							<configOptions>
-								<groupId>${project.groupId}</groupId>
-								<artifactId>${project.artifactId}</artifactId>
-								<artifactVersion>${project.version}</artifactVersion>
-								<library>resttemplate</library>
-								<java8>true</java8>
-								<dateLibrary>java8</dateLibrary>
-								<licenseName>Apache 2.0</licenseName>
-								<licenseUrl>https://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
-							</configOptions>
-						</configuration>
-					</execution>
-					<execution>
-						<id>exec-swag-2</id>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-						<configuration>
-							<inputSpec>https://raw.githubusercontent.com/Crown-Commercial-Service/ccs-scale-api-definitions/CAT_initial/cat/CaT-service.yaml</inputSpec>
-							<language>java</language>
-							<packageName>${client.base.package.name}</packageName>
-							<modelPackage>${client.base.package.name}.model</modelPackage>
-							<apiPackage>${client.base.package.name}.api</apiPackage>
-							<invokerPackage>${client.base.package.name}.invoker</invokerPackage>
-							<generateApis>false</generateApis>
-							<generateModelTests>false</generateModelTests>
-							<generateModelDocumentation>false</generateModelDocumentation>
-							<generateSupportingFiles>false</generateSupportingFiles>
-							<verbose>false</verbose>
-							
-							<configOptions>
-								<groupId>${project.groupId}</groupId>
-								<artifactId>${project.artifactId}</artifactId>
-								<artifactVersion>${project.version}</artifactVersion>
-								<library>resttemplate</library>
-								<java8>true</java8>
-								<dateLibrary>java8</dateLibrary>
-								<licenseName>Apache 2.0</licenseName>
-								<licenseUrl>https://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
-							</configOptions>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
- -->
-			<plugin>
 				<groupId>org.openapitools</groupId>
 				<artifactId>openapi-generator-maven-plugin</artifactId>
 				<version>5.1.0</version>
 				<executions>
 					<execution>
-						<id>exec1</id>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-						<configuration>
-							<inputSpec>https://raw.githubusercontent.com/Crown-Commercial-Service/ccs-api-definitions-common/main/OCDS/OCDS_Vanilla.yaml</inputSpec>
-							<generatorName>spring</generatorName>
-							<generateModels>true</generateModels>
-							<generateSupportingFiles>false</generateSupportingFiles>
-							<generateApis>false</generateApis>
-							<generateModelTests>false</generateModelTests>
-							<packageName>uk.gov.crowncommercial.dts.scale.cat.generated</packageName>
-							<skipValidateSpec>true</skipValidateSpec>
-							<strictSpec>false</strictSpec>
-							<languageSpecificPrimitives>OneOfstringinteger,OneOfstringnumberintegerarrayobject,OneOfLinkedReleaseEmbeddedRelease</languageSpecificPrimitives>
-							<typeMappings>OneOfstringinteger=String,FileFormat=Object,OneOfstringnumberintegerarrayobject=String,OneOfLinkedReleaseEmbeddedRelease=Object</typeMappings>
-							<verbose>false</verbose>
-							<additionalProperties>useBeanValidation=false,hideGenerationTimestamp=true,openApiNullable=false</additionalProperties>
-
-							<configOptions>
-								<sourceFolder>src/gen/java/main</sourceFolder>
-							</configOptions>
-						</configuration>
-					</execution>
-					<execution>
-						<id>exec2</id>
+						<id>exec3</id>
 						<goals>
 							<goal>generate</goal>
 						</goals>
@@ -205,20 +113,24 @@
 							<generateApis>false</generateApis>
 							<generateModelTests>false</generateModelTests>
 							<packageName>uk.gov.crowncommercial.dts.scale.cat.generated</packageName>
-							<skipValidateSpec>true</skipValidateSpec>
+							<skipValidateSpec>false</skipValidateSpec>
 							<strictSpec>false</strictSpec>
-							<languageSpecificPrimitives>OneOfstringinteger,OneOfstringnumberintegerarrayobject,OneOfLinkedReleaseEmbeddedRelease</languageSpecificPrimitives>
-							<typeMappings>OneOfstringinteger=String,FileFormat=Object,OneOfstringnumberintegerarrayobject=String,OneOfLinkedReleaseEmbeddedRelease=Object</typeMappings>
+							<languageSpecificPrimitives>OneOfstringinteger,OneOfstringnumberintegerobject,OneOfLinkedReleaseEmbeddedRelease,OneOfstringnumber,OneOfstringintegernumberboolean,OneOfnumberarray,OneOfLinkedRelease1</languageSpecificPrimitives>
+							<typeMappings>OneOfstringinteger=String,FileFormat=Object,OneOfstringnumberintegerobject=String,OneOfLinkedReleaseEmbeddedRelease=Object,OneOfstringnumber=String,OneOfstringintegernumberboolean=String,OneOfnumberarray=Object,OneOfLinkedRelease1=LinkedRelease1</typeMappings>
 							<verbose>false</verbose>
-							<additionalProperties>useBeanValidation=false,hideGenerationTimestamp=true,openApiNullable=false</additionalProperties>
 							<configOptions>
 								<sourceFolder>src/gen/java/main</sourceFolder>
+								<useBeanValidation>false</useBeanValidation>
+								<dateLibrary>java8</dateLibrary>
+								<hideGenerationTimestamp>true</hideGenerationTimestamp>
+								<openApiNullable>false</openApiNullable>
+								<useOptional>true</useOptional>
 							</configOptions>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-		</plugins>
+ -->		</plugins>
 	</build>
 
 </project>
